Closed Bug 573189 Opened 14 years ago Closed 14 years ago

New helper function upe() not recognized by VarTracker::alwaysThrows

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wmaddox, Unassigned)

Details

Attachments

(1 file)

upe() always throws an exception, like its older sibling npe()
Attachment #452420 - Attachment is patch: true
Attachment #452420 - Flags: review?(edwsmith)
Attachment #452420 - Flags: review?(edwsmith) → review+
Pushed to TR:

http://hg.mozilla.org/tamarin-redux/rev/127f8ccbdabb
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: