Bug 573189 - Observe that upe() always throws an exception in VarTracker (r=edwsmith+)