core/CodegenLIR.cpp
@@ -1185,6 +1185,7 @@ namespace avmplus
         {
             return call == FUNCTIONID(throwAtom) ||
                 call == FUNCTIONID(npe) ||
+                call == FUNCTIONID(upe) ||
                 call == FUNCTIONID(mop_rangeCheckFailed) ||
                 call == FUNCTIONID(handleInterruptMethodEnv);
         }
